--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
 	<string name="app_name">Encuentrame</string>
+	<string name="title_activity_act_main">Encuentrame</string>
 
 	<string name="cuenta">Cuenta</string>
 	<string name="config">Preferencias</string>
 	<string name="lugares">Lugares</string>
 	<string name="rutas">Rutas</string>
 	<string name="avisos">Avisos</string>
-
 
 	<string name="clave">Clave</string>
 	<string name="clave_confirmar">Confirmar Clave</string>
@@ -16,17 +16,16 @@
 	<string name="recover">Recordar</string>
 	<string name="send">Enviar</string>
 
-	<string name="enter_lbl">Entra en tu cuenta</string>
+	<string name="enter_lbl">Introduce tu usuario</string>
 	<string name="register_lbl">Crea una cuenta</string>
-	<string name="recover_lbl">Recuerda tu cuenta</string>
+	<string name="recover_lbl">Recuerda tu clave</string>
 
-	<string name="recover_ok">Se envió un correo con el que recurperar la clave de usuario</string>
-	<string name="recover_ko">Hubo un problema al recuperar la clave de usuario</string>
-	<string name="register_ok">Te has registrado con éxito. Comprueba tu correo.</string>
-
-
+	<string name="recover_ok">Te hemos enviado un correo \n para que recurperes la cuenta</string>
+	<string name="recover_ko">Ocurrió un error al recuperar \n la cuenta de usuario</string>
+	<string name="register_ok">¡Te has registrado con éxito! \n Ahora comprueba tu correo.</string>
+	<string name="register_bad_pass">¡Atención, ambas claves deben ser iguales!</string>
 
 	<string name="action_settings">Settings</string>
 	<string name="section_format">Hello World from section: %1$d</string>
-	<string name="title_activity_act_main">Encuentrate</string>
+
 </resources>
