--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,9 +28,11 @@
 	<string name="action_settings">Settings</string>
 	<string name="section_format">Hello World from section: %1$d</string>
 
+	<string name="guardar">Guardar</string>
 	<string name="editar">Editar</string>
 	<string name="eliminar">Eliminar</string>
 	<string name="nuevo">Nuevo</string>
+	<string name="actualizar_posicion">Actualizar posición</string>
 	<string name="ver_mapa">Ver mapa</string>
 	<string name="configuracion">Configuración</string>
 	<string name="title_activity_act_maps">Mapa</string>
@@ -41,6 +43,8 @@
 	<string name="categoria">Categoría</string>
 	<string name="lat_lon">Lat/Lon</string>
 	<string name="fecha">Fecha</string>
+	<string name="sin_posicion">Sin posición</string>
+	<string name="seguro_eliminar">¿Seguro que desea eliminar?</string>
 
 
 
