--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
 	<string name="app_name">Encuentrame</string>
 	<string name="title_activity_act_main">Encuentrame</string>
+	<string name="title_activity_act_maps">Mapa</string>
+	<string name="title_activity_act_config">Configuración</string>
+	<string name="title_activity_act_ruta">Ruta</string>
+	<string name="title_activity_act_aviso">Aviso</string>
+	<string name="title_activity_act_lugar">Lugar</string>
+
 
 	<string name="cuenta">Cuenta</string>
 	<string name="config">Preferencias</string>
@@ -35,8 +41,6 @@
 	<string name="actualizar_posicion">Actualizar posición</string>
 	<string name="ver_mapa">Ver mapa</string>
 	<string name="configuracion">Configuración</string>
-	<string name="title_activity_act_maps">Mapa</string>
-	<string name="title_activity_act_config">Configuración</string>
 
 	<string name="nombre">Nombre</string>
 	<string name="descripcion">Descripción</string>
@@ -152,6 +156,5 @@
 	<string name="pref_ringtone_silent">Silent</string>
 	
 	<string name="pref_title_vibrate">Vibrate</string>
-	<string name="title_activity_act_lugar">Lugar</string>
 
 </resources>
