--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="app_name">Find me!</string>
-	<string name="action_settings">Settings</string>
+
+	<string name="app_lice_tit">Licence</string>
+	<string name="app_vers_tit">Version:</string>
+	<string name="app_desc">\nApplication for the managemente of your personal points of interest. It counts with geo-position alerts and geo-tracking.\n\n</string>
+
 	<string name="activo">Active</string>
 	<string name="actualizar_posicion">Refresh location</string>
 	<string name="aviso">Warning message</string>
@@ -56,6 +60,16 @@
 	<string name="sin_posicion">No location</string>
 	<string name="start">Start</string>
 	<string name="stop">Stop</string>
+	<string name="ver_mapa">Show map</string>
+
+	<string name="pref_msg_notif_type">Use PopUps Notif.</string>
+	<string name="pref_vibrate">Vibrate</string>
+	<string name="pref_auto_arranque">Start alert service at boot up</string>
+	<string name="pref_header_general">About this App…</string>
+	<string name="pref_header_notifications">Alerts</string>
+	<string name="pref_ringtone">Ringtone</string>
+	<string name="pref_ringtone_silent">Silent</string>
+
 	<string name="title_activity_act_aviso">Warning</string>
 	<string name="title_activity_act_buscar">Search</string>
 	<string name="title_activity_act_config">Settings</string>
@@ -63,5 +77,5 @@
 	<string name="title_activity_act_main">Find me!</string>
 	<string name="title_activity_act_maps">Map</string>
 	<string name="title_activity_act_ruta">Route</string>
-	<string name="ver_mapa">Show map</string>
+
 </resources>
