--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -31,9 +31,9 @@
 	<string name="fecha">Date</string>
 	<string name="fecha_desde">From</string>
 	<string name="fecha_hasta">to</string>
-	<string name="fin">End</string>
+	<string name="fin">End: </string>
 	<string name="guardar">Save</string>
-	<string name="ini">Ini</string>
+	<string name="ini">Ini: </string>
 	<string name="lugares">Points</string>
 	<string name="nombre">Name</string>
 	<string name="nueva_ruta">New Route</string>
@@ -77,5 +77,7 @@
 	<string name="title_activity_act_main">Find me!</string>
 	<string name="title_activity_act_maps">Map</string>
 	<string name="title_activity_act_ruta">Route</string>
+	<string name="ok_stop_tracking">The route ends here</string>
+	<string name="pref_header_data_sync">Data</string>
 
 </resources>
