--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -86,4 +86,5 @@
 	<string name="pref_auto_arranque">Arracar Avisos al Inicio</string>
 	<string name="ok_stop_tracking">La ruta termina aquí</string>
 	<string name="pref_header_data_sync">Datos</string>
+	<string name="sin_filtro">Se eliminaron los parámetros de búsqueda</string>
 </resources>
