--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,8 @@
 	<string name="start">Start</string>
 	<string name="stop">Stop</string>
 
+	<string name="lista_vacia">Empty list…</string>
+
 	<string name="ver_mapa">Show map</string>
 
 	<string name="title_activity_act_aviso">Alert</string>
