--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,11 @@
 
 	<string name="app_name">Find me!</string>
 
-	<string name="app_lice" translatable="false">2016 Cesar Casanova Creative Commons NC-SA</string>
+	<string name="app_lice" translatable="false">2016 Cesar Casanova (Creative Commons NC-SA)</string>
 	<string name="app_vers" translatable="false">2016 - V 1.0</string>
 	<string name="app_lice_tit">Licence</string>
 	<string name="app_vers_tit">Version:</string>
-	<string name="app_desc">\nApplication for the managemente of your personal points of interest. It counts with geo-position alerts and geo-tracking.\n\n</string>
+	<string name="app_desc">\nApp for the management of personal points of interest. It counts with geo-position alerts and geo-tracking. As the data is saved to the cloud, you can share your geo-data easily.\n\n</string>
 
 	<string name="activo">Active</string>
 	<string name="actualizar_posicion">Refresh location</string>
@@ -81,13 +81,18 @@
 	<string name="title_activity_act_maps">Map</string>
 	<string name="title_activity_act_ruta">Route</string>
 
+	<string name="pref_header_data_sync">Data</string>
+	<string name="pref_auto_arranque">Start alert service at boot up</string>
+	<string name="pref_save_login">Save login &amp; password</string>
+
 	<string name="pref_header_notifications">Alerts</string>
 	<string name="pref_ringtone">Ringtone</string>
-
 	<string name="pref_ringtone_silent">Silent</string>
 	<string name="pref_msg_notif_type">Use PopUps Notif.</string>
 	<string name="pref_vibrate">Vibrate</string>
+
 	<string name="pref_header_general">About this App…</string>
-	<string name="pref_auto_arranque">Start alert service at boot up</string>
-	<string name="pref_header_data_sync">Data</string>
+
+	<string name="activos">ACTIVE</string>
+	<string name="inactivos">INACTIVE</string>
 </resources>
