--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -61,28 +61,31 @@
 	<string name="start">Start</string>
 	<string name="stop">Stop</string>
 	<string name="ver_mapa">Show map</string>
-
 	<string name="lista_vacia">Empty list…</string>
+	<string name="ok_stop_tracking">The route ends here</string>
+	<string name="sin_filtro">Search parameters removed</string>
+	<string name="cargando">Loading…</string>
 
-	<string name="pref_msg_notif_type">Use PopUps Notif.</string>
-	<string name="pref_vibrate">Vibrate</string>
-	<string name="pref_auto_arranque">Start alert service at boot up</string>
-	<string name="pref_header_general">About this App…</string>
-	<string name="pref_header_notifications">Alerts</string>
-	<string name="pref_ringtone">Ringtone</string>
-	<string name="pref_ringtone_silent">Silent</string>
-
-	<string name="title_activity_act_aviso">Warning</string>
+	<string name="title_activity_act_aviso">Alert</string>
 	<string name="title_activity_act_buscar">Search</string>
 	<string name="title_activity_act_config">Settings</string>
 	<string name="title_activity_act_lugar">Point</string>
 	<string name="title_activity_act_main">Find me!</string>
 	<string name="title_activity_act_maps">Map</string>
 	<string name="title_activity_act_ruta">Route</string>
-	<string name="ok_stop_tracking">The route ends here</string>
+
 	<string name="pref_header_data_sync">Data</string>
-	<string name="sin_filtro">Search parameters removed</string>
-	<string name="cargando">Loading…</string>
+	<string name="pref_auto_arranque">Start alert service at boot up</string>
+	<string name="pref_save_login">Save login &amp; password</string>
+
+	<string name="pref_header_notifications">Alerts</string>
+	<string name="pref_ringtone">Ringtone</string>
+	<string name="pref_ringtone_silent">Silent</string>
+	<string name="pref_msg_notif_type">Use PopUps Notif.</string>
+	<string name="pref_vibrate">Vibrate</string>
+	<string name="pref_lights">Lights</string>
+
+	<string name="pref_header_general">About this App…</string>
 
 	<string name="activos">ACTIVE</string>
 	<string name="inactivos">INACTIVE</string>
