--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
 	<string name="pref_ringtone_silent">Silent</string>
 	<string name="pref_msg_notif_type">Use PopUps Notif.</string>
 	<string name="pref_vibrate">Vibrate</string>
+	<string name="pref_lights">Lights</string>
 
 	<string name="pref_header_general">About this App…</string>
 
