--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -92,4 +92,6 @@
 	<string name="pref_header_about">About this App…</string>
 	<string name="pref_header_notifications_sum">Alerts settings...</string>
 	<string name="pref_header_opciones_sum">Settings...</string>
+	<string name="login_error">Login Error</string>
+	<string name="register_ko">There was a fault while \n registering the user \n Try again, please.</string>
 </resources>
