--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,13 +53,15 @@
 	<string name="periodo">Period</string>
 	<string name="radio">Radius</string>
 	<string name="recover">Remember</string>
-	<string name="recover_ko">There was a fault when \n recovering the user\'s account</string>
+	<string name="recover_ko">There was a fault while \n recovering the user\'s account</string>
 	<string name="recover_lbl">Recover your password</string>
+	<string name="login_error">Login Error</string>
 	<string name="recover_ok">An email to recover your \n password was sent to you</string>
 	<string name="register">Register</string>
 	<string name="register_bad_pass">Notice that both passwords must be equal!</string>
 	<string name="register_lbl">Create a new account</string>
 	<string name="register_ok">You have just registered! \n Now check your email</string>
+	<string name="register_ko">There was a fault while \n registering the user \n Try again, please.</string>
 	<string name="rutas">Routes</string>
 	<string name="seguro_eliminar">Are you sure you want to remove?</string>
 	<string name="send">Send</string>
