--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -98,8 +98,9 @@
 	<string name="pref_header_logout">Salir</string>
 	<string name="pref_header_logout_sum">Cerrar la sesión actual</string>
 	<string name="pref_header_about">Sobre esta App..</string>
-	<string name="pref_header_notifications_sum">Configuración de avisos...</string>
-	<string name="pref_header_opciones_sum">Configuraciones...</string>
-	<string name="login_error">Error al abrir la sesión</string>
+	<string name="pref_header_notifications_sum">Configuración de avisos…</string>
+	<string name="pref_header_opciones_sum">Configuraciones…</string>
+	<string name="login_error">Usuario o contraseña incorrectas</string>
 	<string name="register_ko">Ocurrió un error al \n registrar el usuario \n Inténtelo de nuevo, por favor.</string>
+	<string name="login_timeout">Tiempo de espera excedido</string>
 </resources>
