--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -40,8 +40,6 @@
 	<string name="nuevo">New</string>
 	<string name="nuevo_aviso">New Warning</string>
 	<string name="nuevo_lugar">New Point</string>
-	<string name="ok_eliminar">The record was deleted</string>
-	<string name="ok_guardar">The record data was saved</string>
 	<string name="periodo">Period</string>
 	<string name="radio">Radius</string>
 	<string name="recover">Remember</string>
@@ -95,4 +93,10 @@
 	<string name="login_error">Wrong user or password</string>
 	<string name="register_ko">There was a fault while \n registering the user \n Try again, please.</string>
 	<string name="login_timeout">Login timeout</string>
+	<string name="ok_guardar_aviso">The Alert was saved</string>
+	<string name="ok_guardar_lugar">The Point was saved</string>
+	<string name="ok_guardar_ruta">The Route was saved</string>
+	<string name="ok_eliminar_aviso">The Alert was deleted</string>
+	<string name="ok_eliminar_lugar">The Point was deleted</string>
+	<string name="ok_eliminar_ruta">The Route was deleted</string>
 </resources>
