--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -8,7 +8,7 @@
 	<string name="title_activity_act_lugar">Lugar</string>
 	<string name="title_activity_act_buscar">Buscar</string>
 
-	<string name="app_desc">\nAplicación para la gestión de lugares de interés, con avisos por geo-posicionamiento y registro de rutas. Podrás compartir tus geo-datos fácilmente, pues serán almacenados en la nube.\n\n</string>
+	<string name="app_desc">Aplicación para la gestión de lugares de interés, con avisos por geo-posicionamiento y registro de rutas. Podrás compartir tus geo-datos fácilmente, pues serán almacenados en la nube.\n</string>
 	<string name="app_lice_tit">Licencia:</string>
 	<string name="app_vers_tit">Versión:</string>
 
@@ -108,4 +108,5 @@
 	<string name="ok_eliminar_lugar">Se eliminó el aviso</string>
 	<string name="ok_eliminar_ruta">Se eliminó la ruta</string>
 	<string name="pto_ruta_ko">Error al obtener los puntos de la ruta</string>
+	<string name="seguro_salir">¿Seguro que desea cerrar la sesión?</string>
 </resources>
