--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -99,4 +99,7 @@
 	<string name="ok_eliminar_aviso">The Alert was deleted</string>
 	<string name="ok_eliminar_lugar">The Point was deleted</string>
 	<string name="ok_eliminar_ruta">The Route was deleted</string>
+
+	<string name="widget_lugar">Points</string>
+	<string name="widget_ruta">Routes</string>
 </resources>
