--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,12 +55,13 @@
 	<string name="ok_stop_tracking">The route ends here</string>
 	<string name="periodo">Period</string>
 	<string name="radio">Radius</string>
-	<string name="recover">Remember</string>
-	<string name="recover_ko">There was a fault while \n recovering the user\'s account</string>
-	<string name="recover_lbl">Recover your password</string>
+	<string name="recover">Reset</string>
+	<string name="recover_ko">There was a fault while \n resetting the user\'s account</string>
+	<string name="recover_lbl">Reset your password</string>
 	<string name="login_error">Wrong user or password</string>
 	<string name="login_timeout">Login timeout</string>
 	<string name="login_fisrt">Log in first</string>
+	<string name="login_ok">Welcome %s</string>
 	<string name="recover_ok">An email to recover your \n password was sent to you</string>
 	<string name="register">Register</string>
 	<string name="register_bad_pass">Notice that both passwords must be equal!</string>
