--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="app_name">Find me!</string>
+	<string name="app_name">Find me! Fire</string>
 
 	<string name="app_lice_tit">Licence</string>
 	<string name="app_vers_tit">Version:</string>
-	<string name="app_desc">\nApp for the management of personal points of interest. It counts with geo-position alerts and geo-tracking. As the data is saved to the cloud, you can share your geo-data easily.\n\n</string>
+	<string name="app_desc">\nApp for the management of personal points of interest. It counts with geo-position alerts and geo-tracking. As the data is saved to the cloud, you can manage your geo-data easily.\n\n</string>
 
 	<string name="activo">Active</string>
 	<string name="actualizar_posicion">Refresh location</string>
@@ -103,4 +103,5 @@
 
 	<string name="widget_lugar">Points</string>
 	<string name="widget_ruta">Routes</string>
+	<string name="login_ok">Welcome %s</string>
 </resources>
