--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -112,4 +112,10 @@
 	<string name="widget_lugar">Lugares</string>
 	<string name="widget_ruta">Rutas</string>
 	<string name="login_ok">Bienvenido %s</string>
+	<string name="info_time">Fecha: </string>
+	<string name="info_prec">\nPrecisión: %.2f m\n</string>
+	<string name="info_dist">\nDistancia: %.0f m</string>
+	<string name="info_alt">\nAltitud: %.0f m</string>
+	<string name="info_nor">\nNorte: %.0f º</string>
+	<string name="info_speed">\nVelocidad: %.2f m/s</string>
 </resources>
