Mostrar distancia total etc

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -107,7 +107,9 @@
 	<string name="info_time">Time: </string>
 	<string name="info_prec">\nAccuracy: %.2f m\n</string>
 	<string name="info_dist">\nDistance: %.0f m</string>
+	<string name="info_dist2">\nDistance: %.1f Km</string>
 	<string name="info_alt">\nAltitude: %.0f m</string>
 	<string name="info_nor">\nBearing: %.0f º</string>
 	<string name="info_speed">\nSpeed: %.2f m/s</string>
+	<string name="info_speed2">\nSpeed: %.0f Km/h</string>
 </resources>
