--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
 	<string name="editar_lugar">Edit Point</string>
 	<string name="editar_ruta">Edit Route</string>
 	<string name="eliminar">Remove</string>
+	<string name="imagen">Picture</string>
 	<string name="en_zona_aviso">Inside Alert Zone</string>
 	<string name="enter">Enter</string>
 	<string name="enter_lbl">Input login</string>
@@ -47,6 +48,7 @@
 	<string name="nuevo">New</string>
 	<string name="nuevo_aviso">New Alert</string>
 	<string name="nuevo_lugar">New Point</string>
+	<string name="salir">Exit anyway</string>
 	<!-- string name="ok_eliminar">The record was deleted</string -->
 	<!-- string name="ok_guardar">The record data was saved</string -->
 	<string name="ok_eliminar_lugar">The Point was deleted</string>
@@ -70,10 +72,12 @@
 	<string name="register_ko">There was a fault while \n registering the user \n Try again, please.</string>
 	<string name="rutas">Routes</string>
 	<string name="seguro_eliminar">Are you sure you want to remove?</string>
+	<string name="seguro_salir">You made changes. Do you want to save?</string>
 	<string name="send">Send</string>
 	<string name="sin_lugar">A location must be stablished…</string>
 	<string name="sin_nombre">A name must be stablished…</string>
 	<string name="sin_posicion">No location</string>
+	<string name="sin_camara">There is no camera on this device</string>
 	<string name="start">Start</string>
 	<string name="stop">Stop</string>
 
@@ -123,4 +127,8 @@
 	<string name="info_nor">\nBearing: %.0f º</string>
 	<string name="info_speed">\nSpeed: %.2f m/s</string>
 	<string name="info_speed2">\nSpeed: %.0f Km/h</string>
+
+	<string name="title_act_imagen">Picture</string>
+	<string name="tomar_imagen">Take a picture</string>
+	<string name="guardar_imagen">Save the picture</string>
 </resources>
