--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
 	<string name="editar_lugar">Edit Point</string>
 	<string name="editar_ruta">Edit Route</string>
 	<string name="eliminar">Remove</string>
+	<string name="estadisticas">Statistics</string>
 	<string name="imagen">Picture</string>
 	<string name="en_zona_aviso">Inside Alert Zone</string>
 	<string name="enter">Enter</string>
@@ -131,4 +132,7 @@
 	<string name="title_act_imagen">Picture</string>
 	<string name="tomar_imagen">Take a picture</string>
 	<string name="guardar_imagen">Save the picture</string>
+
+	<string name="estadisticas_format" formatted="false">Length:\t\t\t\t\t\t%s\nTime:\t\t\t\t\t\t\t%s\nAvg Speed:\t\t\t\t%s\nMin Speed:\t\t\t\t%s\nMax Speed:\t\t\t%s\nMin Altitude:\t\t%s\nMax Altitude:\t\t%s\n</string>
+
 </resources>
