--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -121,4 +121,5 @@
 	<string name="sin_camara">There is no camera on this device</string>
 	<string name="estadisticas">Statistics</string>
 	<string name="estadisticas_format" formatted="false">Length:\t\t\t\t\t\t%s\nTime:\t\t\t\t\t\t\t%s\nAvg Speed:\t\t\t\t%s\nMin Speed:\t\t\t\t%s\nMax Speed:\t\t\t%s\nMin Altitude:\t\t%s\nMax Altitude:\t\t%s\n</string>
+	<string name="sin_permiso_camara">Camera permission not granted</string>
 </resources>
