--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
 	<string name="sin_nombre">A name must be stablished…</string>
 	<string name="sin_posicion">No location</string>
 	<string name="sin_camara">There is no camera on this device</string>
+	<string name="sin_permiso_camara">Camera permission not granted</string>
 	<string name="start">Start</string>
 	<string name="stop">Stop</string>
 
@@ -136,6 +137,5 @@
 	<string name="estadisticas_format" formatted="false">Length:\t\t\t\t\t\t%s\nTime:\t\t\t\t\t\t\t%s\nAvg Speed:\t\t\t\t%s\nMin Speed:\t\t\t\t%s\nMax Speed:\t\t\t%s\nMin Altitude:\t\t%s\nMax Altitude:\t\t%s\n</string>
 
 	<!-- TODO: Remove or change this placeholder text -->
-	<string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
